src/.antlr/pinsParser.java
// Generated from /home/amadej/PINSCompiler/src/pins.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pinsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, KW_ARR=2, KW_ELSE=3, KW_FOR=4, KW_FUN=5, KW_IF=6, KW_THEN=7, KW_TYP=8, 
		KW_VAR=9, KW_WHERE=10, KW_WHILE=11, KW_DECLARE=12, OP_ADD=13, OP_SUB=14, 
		OP_MUL=15, OP_DIV=16, OP_MOD=17, OP_AND=18, OP_OR=19, OP_NOT=20, OP_EQ=21, 
		OP_NEQ=22, OP_LT=23, OP_GT=24, OP_LEQ=25, OP_GEQ=26, OP_LPARENT=27, OP_RPARENT=28, 
		OP_LBRACKET=29, OP_RBRACKET=30, OP_LBRACE=31, OP_RBRACE=32, OP_COLON=33, 
		OP_SEMICOLON=34, OP_COMMA=35, OP_ASSIGN=36, OP_VARARG=37, C_INTEGER=38, 
		C_LOGICAL=39, C_STRING=40, AT_LOGICAL=41, AT_INTEGER=42, AT_STRING=43, 
		IDENTIFIER=44, COMMENT=45, WS=46;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_definitions2 = 2, RULE_definition = 3, 
		RULE_type_definition = 4, RULE_variable_definition = 5, RULE_function_definition = 6, 
		RULE_function_declaration = 7, RULE_type = 8, RULE_parameters = 9, RULE_parameters2 = 10, 
		RULE_parameter = 11, RULE_expression = 12, RULE_expression2 = 13, RULE_logical_ior_expression = 14, 
		RULE_logical_ior_expression2 = 15, RULE_logical_and_expression = 16, RULE_logical_and_expression2 = 17, 
		RULE_compare_expression = 18, RULE_compare_expression2 = 19, RULE_additive_expression = 20, 
		RULE_additive_expression2 = 21, RULE_multiplicative_expression = 22, RULE_multiplicative_expression2 = 23, 
		RULE_prefix_expression = 24, RULE_postfix_expression = 25, RULE_postfix_expression2 = 26, 
		RULE_atom_expression = 27, RULE_atom_expression2 = 28, RULE_atom_expression3 = 29, 
		RULE_atom_expression4 = 30, RULE_expressions = 31, RULE_expressions2 = 32, 
		RULE_integer = 33, RULE_logical = 34, RULE_string = 35, RULE_int_constant = 36, 
		RULE_log_constant = 37, RULE_str_constant = 38, RULE_identifier = 39, 
		RULE_fun = 40, RULE_typ = 41, RULE_var = 42, RULE_arr = 43, RULE_declare = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definitions", "definitions2", "definition", "type_definition", 
			"variable_definition", "function_definition", "function_declaration", 
			"type", "parameters", "parameters2", "parameter", "expression", "expression2", 
			"logical_ior_expression", "logical_ior_expression2", "logical_and_expression", 
			"logical_and_expression2", "compare_expression", "compare_expression2", 
			"additive_expression", "additive_expression2", "multiplicative_expression", 
			"multiplicative_expression2", "prefix_expression", "postfix_expression", 
			"postfix_expression2", "atom_expression", "atom_expression2", "atom_expression3", 
			"atom_expression4", "expressions", "expressions2", "integer", "logical", 
			"string", "int_constant", "log_constant", "str_constant", "identifier", 
			"fun", "typ", "var", "arr", "declare"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'WHERE'", "'arr'", "'else'", "'for'", "'fun'", "'if'", "'then'", 
			"'typ'", "'var'", "'where'", "'while'", "'declare'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'&'", "'|'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", 
			"'>='", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "';'", "','", 
			"'='", "'...'", null, null, null, "'logical'", "'integer'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "KW_ARR", "KW_ELSE", "KW_FOR", "KW_FUN", "KW_IF", "KW_THEN", 
			"KW_TYP", "KW_VAR", "KW_WHERE", "KW_WHILE", "KW_DECLARE", "OP_ADD", "OP_SUB", 
			"OP_MUL", "OP_DIV", "OP_MOD", "OP_AND", "OP_OR", "OP_NOT", "OP_EQ", "OP_NEQ", 
			"OP_LT", "OP_GT", "OP_LEQ", "OP_GEQ", "OP_LPARENT", "OP_RPARENT", "OP_LBRACKET", 
			"OP_RBRACKET", "OP_LBRACE", "OP_RBRACE", "OP_COLON", "OP_SEMICOLON", 
			"OP_COMMA", "OP_ASSIGN", "OP_VARARG", "C_INTEGER", "C_LOGICAL", "C_STRING", 
			"AT_LOGICAL", "AT_INTEGER", "AT_STRING", "IDENTIFIER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pins.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pinsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(pinsParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			definitions();
			setState(91);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public Definitions2Context definitions2() {
			return getRuleContext(Definitions2Context.class,0);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			definition();
			setState(94);
			definitions2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definitions2Context extends ParserRuleContext {
		public TerminalNode OP_SEMICOLON() { return getToken(pinsParser.OP_SEMICOLON, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public Definitions2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions2; }
	}

	public final Definitions2Context definitions2() throws RecognitionException {
		Definitions2Context _localctx = new Definitions2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_definitions2);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_SEMICOLON:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(OP_SEMICOLON);
				setState(97);
				definitions();
				}
				break;
			case EOF:
			case OP_RBRACE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Type_definitionContext type_definition() {
			return getRuleContext(Type_definitionContext.class,0);
		}
		public Variable_definitionContext variable_definition() {
			return getRuleContext(Variable_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_FUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				function_definition();
				}
				break;
			case KW_DECLARE:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				function_declaration();
				}
				break;
			case KW_TYP:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				type_definition();
				}
				break;
			case KW_VAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				variable_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_definitionContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Type_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_definition; }
	}

	public final Type_definitionContext type_definition() throws RecognitionException {
		Type_definitionContext _localctx = new Type_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			typ();
			setState(108);
			identifier();
			setState(109);
			match(OP_COLON);
			setState(110);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_definitionContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			var();
			setState(113);
			identifier();
			setState(114);
			match(OP_COLON);
			setState(115);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_definitionContext extends ParserRuleContext {
		public FunContext fun() {
			return getRuleContext(FunContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode OP_LPARENT() { return getToken(pinsParser.OP_LPARENT, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode OP_RPARENT() { return getToken(pinsParser.OP_RPARENT, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_ASSIGN() { return getToken(pinsParser.OP_ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			fun();
			setState(118);
			identifier();
			setState(119);
			match(OP_LPARENT);
			setState(120);
			parameters();
			setState(121);
			match(OP_RPARENT);
			setState(122);
			match(OP_COLON);
			setState(123);
			type();
			setState(124);
			match(OP_ASSIGN);
			setState(125);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_declarationContext extends ParserRuleContext {
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode OP_LPARENT() { return getToken(pinsParser.OP_LPARENT, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode OP_RPARENT() { return getToken(pinsParser.OP_RPARENT, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			declare();
			setState(128);
			identifier();
			setState(129);
			match(OP_LPARENT);
			setState(130);
			parameters();
			setState(131);
			match(OP_RPARENT);
			setState(132);
			match(OP_COLON);
			setState(133);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ArrContext arr() {
			return getRuleContext(ArrContext.class,0);
		}
		public TerminalNode OP_LBRACKET() { return getToken(pinsParser.OP_LBRACKET, 0); }
		public Int_constantContext int_constant() {
			return getRuleContext(Int_constantContext.class,0);
		}
		public TerminalNode OP_RBRACKET() { return getToken(pinsParser.OP_RBRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				identifier();
				}
				break;
			case AT_LOGICAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				logical();
				}
				break;
			case AT_INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				integer();
				}
				break;
			case AT_STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(138);
				string();
				}
				break;
			case KW_ARR:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				arr();
				setState(140);
				match(OP_LBRACKET);
				setState(141);
				int_constant();
				setState(142);
				match(OP_RBRACKET);
				setState(143);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Parameters2Context parameters2() {
			return getRuleContext(Parameters2Context.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			parameter();
			setState(148);
			parameters2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Parameters2Context extends ParserRuleContext {
		public TerminalNode OP_COMMA() { return getToken(pinsParser.OP_COMMA, 0); }
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Parameters2Context parameters2() {
			return getRuleContext(Parameters2Context.class,0);
		}
		public Parameters2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters2; }
	}

	public final Parameters2Context parameters2() throws RecognitionException {
		Parameters2Context _localctx = new Parameters2Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameters2);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(OP_COMMA);
				setState(151);
				parameter();
				setState(152);
				parameters2();
				}
				break;
			case OP_RPARENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_VARARG() { return getToken(pinsParser.OP_VARARG, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_parameter);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				identifier();
				setState(158);
				match(OP_COLON);
				setState(159);
				type();
				}
				break;
			case OP_VARARG:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				match(OP_VARARG);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Logical_ior_expressionContext logical_ior_expression() {
			return getRuleContext(Logical_ior_expressionContext.class,0);
		}
		public Expression2Context expression2() {
			return getRuleContext(Expression2Context.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			logical_ior_expression();
			setState(165);
			expression2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression2Context extends ParserRuleContext {
		public TerminalNode OP_LBRACE() { return getToken(pinsParser.OP_LBRACE, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode OP_RBRACE() { return getToken(pinsParser.OP_RBRACE, 0); }
		public Expression2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression2; }
	}

	public final Expression2Context expression2() throws RecognitionException {
		Expression2Context _localctx = new Expression2Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_expression2);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				match(OP_LBRACE);
				setState(168);
				match(T__0);
				setState(169);
				definitions();
				setState(170);
				match(OP_RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logical_ior_expressionContext extends ParserRuleContext {
		public Logical_and_expressionContext logical_and_expression() {
			return getRuleContext(Logical_and_expressionContext.class,0);
		}
		public Logical_ior_expression2Context logical_ior_expression2() {
			return getRuleContext(Logical_ior_expression2Context.class,0);
		}
		public Logical_ior_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_ior_expression; }
	}

	public final Logical_ior_expressionContext logical_ior_expression() throws RecognitionException {
		Logical_ior_expressionContext _localctx = new Logical_ior_expressionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_logical_ior_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			logical_and_expression();
			setState(176);
			logical_ior_expression2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logical_ior_expression2Context extends ParserRuleContext {
		public TerminalNode OP_OR() { return getToken(pinsParser.OP_OR, 0); }
		public Logical_and_expressionContext logical_and_expression() {
			return getRuleContext(Logical_and_expressionContext.class,0);
		}
		public Logical_ior_expression2Context logical_ior_expression2() {
			return getRuleContext(Logical_ior_expression2Context.class,0);
		}
		public Logical_ior_expression2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_ior_expression2; }
	}

	public final Logical_ior_expression2Context logical_ior_expression2() throws RecognitionException {
		Logical_ior_expression2Context _localctx = new Logical_ior_expression2Context(_ctx, getState());
		enterRule(_localctx, 30, RULE_logical_ior_expression2);
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				match(OP_OR);
				setState(179);
				logical_and_expression();
				setState(180);
				logical_ior_expression2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logical_and_expressionContext extends ParserRuleContext {
		public Compare_expressionContext compare_expression() {
			return getRuleContext(Compare_expressionContext.class,0);
		}
		public Logical_and_expression2Context logical_and_expression2() {
			return getRuleContext(Logical_and_expression2Context.class,0);
		}
		public Logical_and_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_and_expression; }
	}
